# esp32-wifi-api-dev

./: .gitignore  LICENSE  README.md  apiparser.py  openapi.yaml  openapi_v3.1.1.md  platformio.ini
.trash/tools1-mock-cpp/: CMakeLists.txt  api_doc_generator.cpp  build.sh  openapi.yaml
.trash/tools6-ast-llvm/: CMakeLists.txt  README.md  api_doc_backend.h  generate_doc.sh  main.cpp
data/: index.html  openapi.json
docs/: apiserver-doc.html  wifi-manager-doc.html
include/: APIServer.h  AsyncSerial.h  README_AsyncSerial.md  WifiManager.h  api_doc.h  result.h
lib/APIServer/: README.md
lib/APIServer/docs/: README_mqtt.md  README_serial.md  README_web.md  doc.html
lib/APIServer/src/: APIDocGenerator.h  APIEndpoint.h  APIServer.h  MQTTAPIEndpoint.h  SerialAPIEndpoint.h  SerialAPIFormatter.h  SerialFormatter.h  SerialProxy.h  WebAPIEndpoint.h
lib/RPCServer/docs/: index.html
lib/RPCServer/src/: APIServer.h  APIServer_old.h  RPCServer.h  WebAPIServer.h
lib/WiFiManager/: README.md
lib/WiFiManager/src/: WiFiManager.cpp  WiFiManager.h  WiFiManagerAPI.h  WiFiManager_dfs.h
src/: WiFiManager.cpp  main.cpp
tools/: CMakeLists.txt  api-parser.py  build.sh  gen.cpp  openapi.json
